--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile files('libs/okio-1.4.0.jar')
     compile files('libs/fastjson-1.2.4.jar')
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.android.support:appcompat-v7:23.1.1'
 }
