phoneManager:check the update
scope:PhoneManager
type:change

Signed-off-by: songwenju <songwenju@outlook.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.WelcomeGuideActivity"/>
+        <activity android:name=".activities.HomeActivity"/>
     </application>
 
 </manifest>
