--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:name=".Common.PhoneManagerApplication"
         android:supportsRtl="true"
-        android:theme="@style/noTileTheme">
+        android:theme="@style/AppTheme">
         <activity android:name="com.wjustudio.phoneManager.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
