侧拉菜单布局完成。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".activities.WelcomeGuideActivity"/>
         <activity android:name=".activities.HomeActivity"/>
+        <activity android:name=".activities.LoginActivity"/>
     </application>
 
 </manifest>
