--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".activities.WelcomeGuideActivity"/>
         <activity android:name=".activities.HomeActivity"/>
         <activity android:name=".activities.LoginActivity"/>
+        <activity android:name=".activities.SecurityActivity"/>
     </application>
 
 </manifest>
