PhoneManager: add the setup fragment
scope: PhoneManager
type: feature

Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".activities.HomeActivity"/>
         <activity android:name=".activities.LoginActivity"/>
         <activity android:name=".activities.SecurityActivity"/>
+        <activity android:name=".activities.SecuritySettingActivity"/>
     </application>
 
 </manifest>
