--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.wjustudio.phoneManager"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="1"
-          android:versionName="天天开心版">
+<manifest
+    package="com.wjustudio.phoneManager"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="1"
+    android:versionName="天天开心版">
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 
     <application
+        android:name=".Common.PhoneManagerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".Common.PhoneManagerApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.wjustudio.phoneManager.activities.SplashActivity">
@@ -29,6 +33,20 @@
         <activity android:name=".activities.LoginActivity"/>
         <activity android:name=".activities.SecurityActivity"/>
         <activity android:name=".activities.SecuritySettingActivity"/>
+        <activity android:name=".activities.SelectContactActivity"/>
+        <receiver
+            android:name=".receive.MyDeviceAdminReceiver"
+            android:description="@string/sample_device_admin_description"
+            android:label="@string/sample_device_admin"
+            android:permission="android.permission.BIND_DEVICE_ADMIN"
+            >
+            android:name="android.app.device_admin"
+            android:resource="@xml/device_admin_sample" />
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+            </intent-filter>
+
+        </receiver>
     </application>
 
 </manifest>
