--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.wjustudio.phoneManager"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="1"
-    android:versionName="天天开心版">
+<manifest package="com.wjustudio.phoneManager"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          android:versionCode="1"
+          android:versionName="天天开心版">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -21,7 +20,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.wjustudio.phoneManager.activities.SplashActivity">
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -35,19 +34,24 @@
         <activity android:name=".activities.TheftProofSelectActivity"/>
         <activity android:name=".activities.SelectContactActivity"/>
         <activity android:name=".activities.TheftProofSettingActivity"/>
+
         <receiver
             android:name=".receive.MyDeviceAdminReceiver"
             android:description="@string/sample_device_admin_description"
             android:label="@string/sample_device_admin"
-            android:permission="android.permission.BIND_DEVICE_ADMIN"
-            >
+            android:permission="android.permission.BIND_DEVICE_ADMIN">
             android:name="android.app.device_admin"
             android:resource="@xml/device_admin_sample" />
             <intent-filter>
-                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED"/>
             </intent-filter>
-
         </receiver>
+
+        <service
+            android:name=".service.TheftProofService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
     </application>
 
 </manifest>
