PhoneManager:add the CommGuardActivity
add one layot and some Activity

scope: PhoneManager
type: feature

Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
         <activity android:name=".activities.TheftProofSelectActivity"/>
         <activity android:name=".activities.SelectContactActivity"/>
         <activity android:name=".activities.TheftProofSettingActivity"/>
+        <activity android:name=".activities.CacheCleanActivity"/>
+        <activity android:name=".activities.CommGuardActivity"/>
+        <activity android:name=".activities.ProcessManagerActivity"/>
+        <activity android:name=".activities.SoftManagerActivity"/>
 
         <receiver
             android:name=".receive.MyDeviceAdminReceiver"
