--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 
     <application
-        android:name=".Common.PhoneManagerApplication"
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,7 +28,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.WelcomeGuideActivity"/>
-        <activity android:name=".activities.HomeActivity"/>
+        <activity android:name=".activities.HomeActivity"
+            android:windowSoftInputMode="adjustNothing"/>
         <activity android:name=".activities.LoginActivity"/>
         <activity android:name=".activities.TheftProofActivity"/>
         <activity android:name=".activities.TheftProofSelectOneActivity"/>
