--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,8 @@
         <activity android:name=".activities.TheftProofSettingActivity"/>
         <activity android:name=".activities.CacheCleanActivity"/>
         <activity android:name=".activities.BlackNumActivity"/>
-        <activity android:name=".activities.ProcessManagerActivity"/>
-        <activity android:name=".activities.SoftManagerActivity"/>
+        <activity android:name=".activities.ProcessMgrActivity"/>
+        <activity android:name=".activities.SoftMgrActivity"/>
         <activity android:name=".activities.BlackNumSettingActivity"/>
 
         <receiver
