PhoneManager:use the RxJava for AppMgr
Signed-off-by: songwenju <hgdswj@163.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':evenbusdemo', ':contactdemo', ':sharedemo'
+include ':app', ':evenbusdemo', ':contactdemo', ':sharedemo', ':rxjavademo'
