PhoneManager:add the LockApp
Signed-off-by: hgdswj <hgdswj@163.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':evenbusdemo', ':contactdemo', ':sharedemo', ':rxjavademo'
+include ':app', ':evenbusdemo', ':contactdemo', ':sharedemo', ':rxjavademo', ':runningactivitydemo'
