--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.wjustudio.phoneManager"
-          xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.wjustudio.phoneManager"
           android:versionCode="1"
-          android:versionName="天天开心版"
-          xmlns:tools="http://schemas.android.com/tools">
+          android:versionName="天天开心版">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -14,10 +14,10 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
-        tools:ignore="ProtectedPermissions" />
+        tools:ignore="ProtectedPermissions"/>
 
     <application
         android:name="org.litepal.LitePalApplication"
@@ -34,7 +34,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.WelcomeGuideActivity"/>
-        <activity android:name=".activities.HomeActivity"
+        <activity
+            android:name=".activities.HomeActivity"
             android:windowSoftInputMode="adjustNothing"/>
         <activity android:name=".activities.LoginActivity"/>
         <activity android:name=".activities.TheftProofActivity"/>
@@ -48,7 +49,10 @@
         <activity android:name=".activities.SoftMgrActivity"/>
         <activity android:name=".activities.BlackNumSettingActivity"/>
         <activity android:name=".activities.SoftMgrSettingActivity"/>
-        <activity android:name=".activities.AppLockActivity"/>
+        <activity
+            android:name=".activities.AppLockActivity"
+            android:excludeFromRecents="true"
+            android:launchMode="singleInstance"/>
 
         <receiver
             android:name=".receive.MyDeviceAdminReceiver"
