PhoneManager: add the QrCodeScan
Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,8 @@
         <activity android:name=".activities.SoftMgrActivity"/>
         <activity android:name=".activities.BlackNumSettingActivity"/>
         <activity android:name=".activities.SoftMgrSettingActivity"/>
+        <activity android:name=".activities.MipcaActivityCapture"/>
+        <activity android:name=".activities.QrCodeScanActivity"/>
         <activity
             android:name=".activities.AppLockActivity"
             android:excludeFromRecents="true"
