PhoneManager:finish the PhoneLocation query
Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         <activity android:name=".activities.SoftMgrSettingActivity"/>
         <activity android:name=".activities.MipcaActivityCapture"/>
         <activity android:name=".activities.QrCodeScanActivity"/>
+        <activity android:name=".activities.PhoneLocationActivity"/>
         <activity
             android:name=".activities.AppLockActivity"
             android:excludeFromRecents="true"
