PhoneManager:add the login and register
Signed-off-by: songwenju <hgdswj@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity
             android:name=".activities.HomeActivity"
             android:windowSoftInputMode="adjustNothing"/>
-        <activity android:name=".activities.LoginActivity"/>
+        <activity android:name=".activities.LoginRegActivity"/>
         <activity android:name=".activities.TheftProofActivity"/>
         <activity android:name=".activities.TheftProofSelectOneActivity"/>
         <activity android:name=".activities.TheftProofSelectTwoActivity"/>
