PhoneManager:finish the ui
Signed-off-by: hgdswj <hgdswj@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,9 +63,11 @@
         <activity android:name=".activities.SoftMgrActivity"/>
         <activity android:name=".activities.BlackNumSettingActivity"/>
         <activity android:name=".activities.SoftMgrSettingActivity"/>
-        <activity android:name=".activities.MipcaActivityCapture"/>
+        <activity android:name=".activities.CaptureActivity"/>
         <activity android:name=".activities.QrCodeScanActivity"/>
         <activity android:name=".activities.PhoneLocationActivity"/>
+        <activity android:name=".activities.UserInfoActivity"/>
+        <activity android:name=".activities.AppSettingActivity"/>
         <activity
             android:name=".activities.AppLockActivity"
             android:excludeFromRecents="true"
