--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     compile files('libs/fastjson-1.2.4.jar')
     compile 'de.greenrobot:eventbus:2.4.0'
     compile files('libs/xUtils-2.6.14.jar')
-    compile files('libs/nineoldandroids-2.4.0.jar')
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
@@ -40,4 +39,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.3'
     compile files('libs/zxing.jar')
+    compile 'com.facebook.fresco:fresco:0.10.0'
 }
