--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
         <activity android:name=".activities.SoftMgrActivity"/>
         <activity android:name=".activities.BlackNumSettingActivity"/>
         <activity android:name=".activities.SoftMgrSettingActivity"/>
-        <activity android:name=".activities.CaptureActivity"/>
+        <activity android:name=".activities.QrCodeCaptureActivity"/>
         <activity android:name=".activities.QrCodeScanActivity"/>
         <activity android:name=".activities.PhoneLocationActivity"/>
         <activity android:name=".activities.UserInfoActivity"/>
