PhoneManager:add retrofit demo
Signed-off-by: songwj2 <songwj2@lenovo.com>

--- a/retrofitdemo/src/main/AndroidManifest.xml
+++ b/retrofitdemo/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.rxjavademo">
+<manifest package="com.wjustudio.retrofitdemo"
+          xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ButtonActivity"/>
+
+        <activity android:name=".duoshuo.DuoShuoActivity"/>
     </application>
 
 </manifest>
