--- a/handlerdemo/src/main/AndroidManifest.xml
+++ b/handlerdemo/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.rxjavademo">
+<manifest package="com.wjustudio.handlerdemo"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,7 +15,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ButtonActivity"/>
     </application>
 
 </manifest>
