--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':evenbusdemo', ':contactdemo', ':sharedemo', ':rxjavademo', ':runningactivitydemo'
+include ':app', ':evenbusdemo', ':contactdemo', ':sharedemo', ':rxjavademo', ':runningactivitydemo', ':handlerdemo', ':retrofitdemo'
